# somnotate

./: .gitignore  AlaskaEx1.csv  README.md  pyproject.toml  requirements.txt
data/: example_spreadsheet.csv
example_pipeline/: 00_convert_sleepsign_files.py  00_truncate_edf_annotations.py  01_preprocess.py  01_preprocess_signals.py  02_test_automated_state_annotion.py  02_test_state_annotation.py  03_train_automated_state_annotation.py  03_train_state_annotation.py  04_annotate_states.py  04_run_state_annotation.py  05_manual_refinement.py  06_compare_state_annotations.py  07_compute_state_probabilities.py  07_run_missing_value_annotation.py  09_convert_hypnogram_to_matlab_struct.py  configuration.py  data_io.py  optional_dependencies.txt  requirements.txt
extensions/: convert_hypnogram_to_matlab_struct.py  convert_sleepsign_files.py  truncate_datasets.py
somnotate/: __init__.py  _automated_state_annotation.py  _manual_state_annotation.py  _plotting.py  _utils.py  requirements.txt
